--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,34 @@ main {
     align-items: center;
     margin-top: 240px;
     position: relative;
+}
 
+nav {
+    display: flex;
+    align-items: center;
+    
+}
+
+nav div {
+    display: flex;
+    align-items: center;
+    width: 50%;
+
+}
+
+nav .top-left {
+    justify-content: start;
+}
+
+nav .top-right {
+    justify-content: flex-end;
+    text-align: right;
+    right: 0;
+}
+
+.avatar img {
+    border-radius: 50%;
+    height: 45px;
+    width: 45px;
 }
 
